crates/oxc_css_parser/tests/recoverable/eof/unclosed-paren.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unclosed parenthesis before end of file
  ┌─ unclosed-paren.css:2:14
  │
2 │   width: calc(100% - 10px
  │              ^

error: unclosed block before end of file
  ┌─ unclosed-paren.css:1:3
  │
1 │ a {
  │   ^
